# swarm_python

./: CMakeLists.txt  README.md  README.md~  TeamControllerPlugin.cc  TeamControllerPlugin.hh  controller.py
circular_example/: controller.py  params.py
worlds/: circular_quads_10.world  ground_simple_10.world.erb  install.sh  takeoff36.world  takeoff4.world
